[package]
name = "servive"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1.0", features = ["full"] }
mime_guess = "2.0"
percent-encoding = "2.0"
clap = { version = "4.0", features = ["derive"] }
http-auth-basic = "0.3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.10.1"
mime = "0.3.17"
