[package]
name = "servive"
version = "0.1.0"
edition = "2024"
authors = ["METDXT <metdxt@obj.su>"]
description = "A stupid simple program to serve files over HTTP"
repository = "https://github.com/metdxt/servive"
license = "MIT"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1.0", features = ["full"] }
mime_guess = "2.0"
percent-encoding = "2.0"
clap = { version = "4.0", features = ["derive"] }
http-auth-basic = "0.3.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.10.1"
mime = "0.3.17"
rustls = { version = "0.22", optional = true }
tokio-rustls = { version = "0.25", optional = true }
rustls-pki-types = { version = "1.0", optional = true }
subtle = { version = "2.5", features = ["nightly"] }
local-ip-address = "0.6.5"

[features]
default = ["tls"]
tls = [ "rustls", "tokio-rustls", "rustls-pki-types" ]

[profile.release]
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
codegen-units = 1
